change grpc bidi-stream error handling and change grpc API interface (#928)
* change grpc bidi-stream error handling and change grpc API interface for more informative payload for each stream response


* fix nil slice append nil pointer failure


* generate grpc stubs and fix implementation for it


* fix grpc addrs divided by zero bug


* send bidirectional response payload even error exists
